update: panel names

--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -1,4 +1,11 @@
 {
   "header": "This is a header.",
-  "footer": "This is a footer."
+  "footer": "This is a footer.",
+  "panels": [
+    "User Information",
+    "Reply Information",
+    "Fixed Menu",
+    "Dynamic Menu",
+    "Conversation"
+  ]
 }
