--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -1,4 +1,11 @@
 {
   "header": "これがヘッダーです。",
-  "footer": "これがフッターです。"
+  "footer": "これがフッターです。",
+  "panels": [
+    "ユーザーインフォメーション",
+    "応対インフォーメーショn",
+    "フィックスメニュー",
+    "ダイナミックメニュー",
+    "コミュニケーション"
+  ]
 }
