--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -1,6 +1,6 @@
 {
-  "header": "これがヘッダーです。",
-  "footer": "これがフッターです。",
+  "header": "これがヘッダーのプレースホルダーです。",
+  "footer": "これがフッターのプレースホルダーです。これがフッターのプレースホルダーです。",
   "panels": [
     "ユーザーインフォメーション",
     "応対インフォーメーショn",
