--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -3,9 +3,9 @@
   "footer": "これがフッターのプレースホルダーです。これがフッターのプレースホルダーです。",
   "panels": [
     "ユーザーインフォメーション",
-    "応対インフォーメーショn",
     "フィックスメニュー",
-    "ダイナミックメニュー",
-    "コミュニケーション"
+    "コミュニケーション",
+    "応対インフォーメーション",
+    "ダイナミックメニュー"
   ]
 }
