--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -1,5 +1,5 @@
 {
-  "header": "これがヘッダーのプレースホルダーです。",
+  "header": "これがヘッダーのプレースホルダーです",
   "footer": "これがフッターのプレースホルダーです。これがフッターのプレースホルダーです。",
   "panels": [
     "ユーザーインフォメーション",
@@ -7,5 +7,6 @@
     "コミュニケーション",
     "応対インフォーメーション",
     "ダイナミックメニュー"
-  ]
+  ],
+  "sortable": "自動ソート"
 }
