--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -1,12 +1,12 @@
 {
-  "header": "これがヘッダーのプレースホルダーです",
-  "footer": "これがフッターのプレースホルダーです。これがフッターのプレースホルダーです。",
+  "header": "アシスタントメニュー（インフォーメーション）",
+  "footer": "アシスタントメッセージ・マーケティングメッセージ・他のメッセージ",
   "panels": [
-    "ユーザーインフォメーション",
+    "ユーザー情報",
     "フィックスメニュー",
     "コミュニケーション",
-    "応対インフォーメーション",
+    "応対情報",
     "ダイナミックメニュー"
   ],
-  "sortable": "自動ソート"
+  "sortable": "動的ソート"
 }
