update: reset locales

--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -8,5 +8,6 @@
     "Reply Information",
     "Dynamic Menu"
   ],
-  "sortable": "Sortable"
+  "sortable": "Sortable",
+  "resetPosition": "Reset Position"
 }
