--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -3,10 +3,10 @@
   "footer": "アシスタントメッセージ・マーケティングメッセージ・他のメッセージ",
   "panels": [
     "ユーザー情報",
-    "フィックスメニュー",
-    "コミュニケーション",
     "応対情報",
-    "ダイナミックメニュー"
+    "フィックスメニュー",
+    "ダイナミックメニュー",
+    "コミュニケーション"
   ],
   "sortable": "動的ソート",
   "resetPosition": "位置リセット"
