update: watson speech to text

--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -9,5 +9,8 @@
     "Conversation"
   ],
   "sortable": "Sortable",
-  "resetPosition": "Reset Position"
+  "resetPosition": "Reset Position",
+  "editNotAllowedWhileRecording": "Edit not allowed while recording.",
+  "speaker": "Speaker",
+  "analyzing": "Analyzing..."
 }
