--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -13,5 +13,6 @@
   "editNotAllowedWhileRecording": "音声識別中にはキーワードは編集不可です。",
   "speaker": "話者",
   "analyzing": "分析中...",
-  "panelWasPinned": "このパネルは固定されています。"
+  "panelWasPinned": "このパネルは固定されています。",
+  "messageFlag": "説明を表示"
 }
