--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -15,5 +15,6 @@
   "analyzing": "分析中...",
   "panelWasPinned": "このパネルは固定されています。",
   "messageFlag": "説明を表示",
+  "sstFlag": "ファイル/マイク",
   "disableDraggingMessage": "ソートにはまだ少しバグが存在しているため、このデモではパネルが最小化されている時はソートできません。"
 }
