update: single file voice source

--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -15,6 +15,9 @@
   "analyzing": "分析中...",
   "panelWasPinned": "このパネルは固定されています。",
   "messageFlag": "説明を表示",
-  "sstFlag": "ファイル/マイク",
-  "disableDraggingMessage": "ソートにはまだ少しバグが存在しているため、このデモではパネルが最小化されている時はソートできません。"
+  "disableDraggingMessage": "ソートにはまだ少しバグが存在しているため、このデモではパネルが最小化されている時はソートできません。",
+  "sstFlag": "音声ソース",
+  "file": "ファイルから",
+  "files": "複数のファイルから",
+  "mic": "マイクロフォンから"
 }
