--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -15,6 +15,9 @@
   "analyzing": "Analyzing...",
   "panelWasPinned": "This panel was pinned.",
   "messageFlag": "Messages",
-  "sstFlag": "Files/Mic",
-  "disableDraggingMessage": "Because of some bugs, sort is not available if any panel is minimized in this demo."
+  "disableDraggingMessage": "Because of some bugs, sort is not available if any panel is minimized in this demo.",
+  "sstFlag": "Voice Source",
+  "file": "From one File",
+  "files": "From two Files",
+  "mic": "From Microphone"
 }
