--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -2,10 +2,10 @@
   "header": "アシスタントメニュー（インフォーメーション）",
   "footer": "アシスタントメッセージ・マーケティングメッセージ・他のメッセージ",
   "panels": [
-    "ユーザー情報",
+    "会員情報",
     "応対情報",
-    "フィックスメニュー",
-    "ダイナミックメニュー",
+    "定番メニュー",
+    "会話対応メニュー",
     "コミュニケーション"
   ],
   "sortable": "動的ソート",
@@ -19,5 +19,13 @@
   "sstFlag": "音声ソース",
   "file": "ファイルから",
   "files": "複数のファイルから",
-  "mic": "マイクロフォンから"
+  "mic": "マイクロフォンから",
+  "fixedMenu": [
+    "振込貸付",
+    "書類発送",
+    "一時約束日",
+    "自宅/勤務先変更",
+    "利用限度額/利率変更受付",
+    "カード再発行受付"
+  ]
 }
