update: improve loading styles

--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -29,5 +29,6 @@
     "Fixed Menu6"
   ],
   "customer": "Customer",
-  "service": "Call Service"
+  "service": "Call Service",
+  "loading": "Loading..."
 }
