update: switch user information

--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -30,5 +30,8 @@
   ],
   "customer": "Customer",
   "service": "Call Service",
-  "loading": "Loading..."
+  "loading": "Loading...",
+  "switchUser": "Switch User",
+  "language": "Language",
+  "settings": "Setting"
 }
