update: improve label text

--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -14,12 +14,12 @@
   "speaker": "話者",
   "analyzing": "分析中...",
   "panelWasPinned": "このパネルは固定されています。",
-  "messageFlag": "説明を表示",
+  "messageFlag": "説明スイッチ",
   "disableDraggingMessage": "ソートにはまだ少しバグが存在しているため、このデモではパネルが最小化されている時はソートできません。",
-  "sstFlag": "音声ソース",
-  "file": "ファイルから",
-  "files": "2つのファイルから",
-  "mic": "マイクロフォンから",
+  "sstFlag": "音声ソース選択",
+  "file": "1ファイルで再生する",
+  "files": "2ファイルで再生する",
+  "mic": "マイクロフォンを使用する",
   "fixedMenu": [
     "振込貸付",
     "書類発送",
