--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -17,9 +17,9 @@
   "messageFlag": "Messages",
   "disableDraggingMessage": "Because of some bugs, sort is not available if any panel is minimized in this demo.",
   "sstFlag": "Voice Source",
-  "file": "From Single File",
-  "files": "From Two Files",
-  "mic": "From Microphone",
+  "file": "Play Single File",
+  "files": "Play Two Files",
+  "mic": "Use Microphone",
   "fixedMenu": [
     "振込貸付",
     "書類発送",
