update: show a modal when a menu is clicked

--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -33,5 +33,7 @@
   "loading": "Loading...",
   "switchUser": "Switch User",
   "language": "Language",
-  "settings": "Setting"
+  "settings": "Setting",
+  "ok": "OK",
+  "cancel": "Cancel"
 }
