--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -3,10 +3,11 @@
   "footer": "アシスタントメッセージ・マーケティングメッセージ・他のメッセージ",
   "panels": [
     "会員情報",
-    "応対情報",
+    "応対情報（自動）",
     "定番メニュー",
     "会話対応メニュー",
-    "コミュニケーション"
+    "コミュニケーション",
+    "応対情報（手入力）"
   ],
   "sortable": "動的ソート",
   "resetPosition": "位置リセット",
@@ -27,5 +28,6 @@
   "language": "言語変更",
   "settings": "セッティング",
   "ok": "確認",
-  "cancel": "キャンセル"
+  "cancel": "キャンセル",
+  "applyInputSwitch": "応対情報（手入力）に切り替える"
 }
