--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -29,5 +29,5 @@
   "settings": "Setting",
   "ok": "OK",
   "cancel": "Cancel",
-  "replyInputSwitch": "Switch to Reply Information Input"
+  "replyInputSwitch": "Switch to 'Reply Input' / 'Fixed Menu'"
 }
