--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -29,5 +29,5 @@
   "settings": "セッティング",
   "ok": "確認",
   "cancel": "キャンセル",
-  "replyInputSwitch": "応対情報（手入力）に切り替える"
+  "replyInputSwitch": "応対情報（手入力）・定番メニューに切り替える"
 }
