--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -9,7 +9,7 @@
     "コミュニケーション",
     "応対情報（手入力）"
   ],
-  "sortable": "動的ソート",
+  "sortable": "整列モード",
   "resetPosition": "位置リセット",
   "editNotAllowedWhileRecording": "音声識別中にはキーワードは編集不可です。",
   "speaker": "話者",
