--- a/src/locales/locales/en.json
+++ b/src/locales/locales/en.json
@@ -2,12 +2,12 @@
   "header": "Assistant Menu (Information)",
   "footer": "Assistant messages or marketing messages or other messages.",
   "panels": [
-    "User Information",
-    "Reply Information (Auto)",
-    "Fixed Menu",
-    "Dynamic Menu",
-    "Conversation",
-    "Reply Information (Input)"
+    "Panel1",
+    "Panel2",
+    "Panel3",
+    "Panel4",
+    "Panel5(Conversation)",
+    "Panel6"
   ],
   "sortable": "Sortable",
   "resetPosition": "Reset Position",
@@ -21,15 +21,15 @@
   "file": "Play Single File",
   "files": "Play Two Files",
   "mic": "Use Microphone",
-  "customer": "Customer",
-  "service": "Call Service",
+  "customer": "Speaker1",
+  "service": "Speaker2",
   "loading": "Loading...",
   "switchUser": "Switch User",
   "language": "Language",
   "settings": "Setting",
   "ok": "OK",
   "cancel": "Cancel",
-  "replyInputSwitch": "Switch to 'Reply Input' / 'Fixed Menu'",
+  "replyInputSwitch": "Switch Panels'",
   "uploadFiles": "Upload Voice Files",
   "uploadFileLabels": ["S1", "S2"],
   "source": "File(s)",
