--- a/src/locales/locales/jp.json
+++ b/src/locales/locales/jp.json
@@ -1,17 +1,16 @@
 {
-  "header": "アシスタントメニュー（インフォーメーション）",
-  "footer": "アシスタントメッセージ・マーケティングメッセージ・他のメッセージ",
+  "header": "テストタイトル（タイトル）",
+  "footer": "テストメッセージテストメッセージテストメッセージテストメッセージ",
   "panels": [
-    "会員情報",
-    "応対情報（自動）",
-    "定番メニュー",
-    "会話対応メニュー",
-    "コミュニケーション",
-    "応対情報（手入力）"
+    "テストパネル１",
+    "テストパネル２",
+    "テストパネル３",
+    "テストパネル４",
+    "テストパネル５（コミニュケーション）",
+    "テストパネル６"
   ],
-  "sortable": "整列モード",
-  "resetPosition": "位置リセット",
-  "editNotAllowedWhileRecording": "音声識別中にはキーワードは編集不可です。",
+  "sortable": "ソートスイッチ",
+  "resetPosition": "リセット",
   "speaker": "話者",
   "analyzing": "分析中...",
   "panelWasPinned": "このパネルは固定されています。",
@@ -21,17 +20,17 @@
   "file": "1ファイルで再生する",
   "files": "2ファイルで再生する",
   "mic": "マイクロフォンを使用する",
-  "customer": "お客様",
-  "service": "コミュニケータ",
+  "customer": "話者１",
+  "service": "話者２",
   "loading": "ロード中...",
-  "switchUser": "会員番号切り替え",
+  "switchUser": "ユーザ切り替え",
   "language": "言語変更",
   "settings": "セッティング",
   "ok": "確認",
   "cancel": "キャンセル",
-  "replyInputSwitch": "応対情報（手入力）・定番メニューに切り替える",
+  "replyInputSwitch": "パネル切り替え",
   "uploadFiles": "音声ファイルアップロード",
-  "uploadFileLabels": ["コミュニケータの", "お客様の"],
+  "uploadFileLabels": ["話者１", "話者２"],
   "source": "ファイル",
   "oneFile": "1つ",
   "twoFiles": "2つ",
